--- a/app/src/main/res/layout/fragment_heroes_list.xml
+++ b/app/src/main/res/layout/fragment_heroes_list.xml
@@ -5,9 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingLeft="2dp"
     android:paddingRight="2dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    >
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cardList"
