--- a/app/src/main/res/layout/cardview_heroe_front.xml
+++ b/app/src/main/res/layout/cardview_heroe_front.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -15,8 +14,7 @@
         card_view:cardCornerRadius="0dp"
         android:layout_margin="2dp"
         android:id="@+id/cardLyFront"
-        android:visibility="visible"
-        >
+        android:visibility="visible">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -28,70 +26,19 @@
                 android:src="@drawable/rsz_dva"
                 android:id="@+id/imgHeroe"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_flip"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:id="@+id/btnFlip"/>
-
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:background="@color/blueOverwatch"
-                android:text="contact det"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:textAlignment="center"
                 android:layout_below="@+id/imgHeroe"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Toast"/>
-
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
-        android:layout_margin="2dp"
-        android:id="@+id/cardLyBack"
-        android:visibility="gone"
-        >
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/rsz_overwatch_logo"
-                android:id="@+id/imgHeroeBack"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_flip"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:id="@+id/btnFlipBack"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Back"/>
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
 </LinearLayout>
