--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,9 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tlbLyToolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?attr/actionBarSize"
     android:minHeight="?attr/actionBarSize"
     android:background="@android:color/transparent"
+    android:gravity="top"
+    app:titleMarginTop="13dp"
     android:elevation="4dp"
     app:layout_collapseMode="pin"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
