--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="blueOverwatch">#28354f</color>
+    <color name="blueTransparentOverwatch">#CC132a4d</color>
+    <color name="lightblueOverwatch">#00c3ff</color>
     <color name="darkBlueOverwatch">#222d44</color>
     <color name="greyOverwatch">#CECECE</color>
+    <color name="white">#FFFFFF</color>
 </resources>
