--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -2,19 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
-    android:paddingBottom="160dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="200dp"
     android:background="@color/darkBlueOverwatch"
     android:gravity="bottom">
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:id="@+id/drwIvLogoOverwatch"
-        android:paddingTop="@dimen/activity_vertical_margin"/>
+        android:src="@drawable/dva"/>
 
 </LinearLayout>
