--- a/app/src/main/res/layout/activity_heroes.xml
+++ b/app/src/main/res/layout/activity_heroes.xml
@@ -26,7 +26,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:id="@+id/imgToolbar"
+                android:id="@+id/imgToolbarCollapsing"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
