--- a/app/src/main/res/layout/fragment_generality_hero.xml
+++ b/app/src/main/res/layout/fragment_generality_hero.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="20"
+        android:paddingTop="10dp"
         android:background="@color/blueTransparentOverwatch"
         android:orientation="vertical">
 
