--- a/app/src/main/res/layout/activity_heroes.xml
+++ b/app/src/main/res/layout/activity_heroes.xml
@@ -34,11 +34,18 @@
                 app:layout_collapseMode="parallax"
                 android:visibility="visible"/>
 
-            <include
-                layout="@layout/toolbar"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbarHero"
                 android:layout_width="match_parent"
-                android:layout_height="104dp"
-                app:layout_collapseMode="pin"/>
+                android:layout_height="?attr/actionBarSize"
+                android:minHeight="?attr/actionBarSize"
+                android:background="@android:color/transparent"
+                android:gravity="top"
+                app:titleMarginTop="13dp"
+                android:elevation="4dp"
+                app:layout_collapseMode="parallax"
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabLayout"
