--- a/app/src/main/res/layout/fragment_generality_hero.xml
+++ b/app/src/main/res/layout/fragment_generality_hero.xml
@@ -166,12 +166,14 @@
             android:layout_marginLeft="25dp"
             android:textSize="25sp"/>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/skillsRelativeLayout">
+            android:id="@+id/skillsRelativeLayout"
+            android:layout_marginLeft="20dp"
+            android:orientation="vertical">
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
