--- a/app/src/main/res/layout/activity_heroes.xml
+++ b/app/src/main/res/layout/activity_heroes.xml
@@ -35,7 +35,9 @@
                 android:visibility="visible"/>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbarHero"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/heroToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:minHeight="?attr/actionBarSize"
