--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,62 +1,71 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    tools:context="com.onlywatch.fleriche.onlywatch.GameFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.onlywatch.fleriche.onlywatch.GameFragment">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/border_card_view"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:elevation="3dp">
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/heroesListCardView"
-                card_view:cardElevation="5dp"
-                card_view:cardCornerRadius="10dp"
-                card_view:cardPreventCornerOverlap="false"
-                android:layout_margin="2dp">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border_card_view"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:elevation="3dp">
 
-                <RelativeLayout
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:id="@+id/heroesListCardView"
+                    card_view:cardElevation="5dp"
+                    card_view:cardCornerRadius="10dp"
+                    card_view:cardPreventCornerOverlap="false"
+                    android:layout_margin="2dp">
 
-                    <ImageView
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imgHeroesList"
-                        android:src="@drawable/heroes"
-                        android:scaleType="centerCrop"
-                        android:adjustViewBounds="true"/>
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/titleHeroesList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Heroes"
-                        android:background="@color/blueOverwatch"
-                        android:gravity="center_vertical"
-                        android:textColor="@android:color/white"
-                        android:textSize="18sp"
-                        android:textAlignment="center"
-                        android:layout_below="@+id/imgHeroesList"/>
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/imgHeroesList"
+                            android:src="@drawable/heroes"
+                            android:scaleType="centerCrop"
+                            android:adjustViewBounds="true"/>
 
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/titleHeroesList"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Heroes"
+                            android:background="@color/blueOverwatch"
+                            android:gravity="center_vertical"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp"
+                            android:textAlignment="center"
+                            android:layout_below="@+id/imgHeroesList"/>
 
-            </android.support.v7.widget.CardView>
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
+
