--- a/app/src/main/res/layout/fragment_heroes_list.xml
+++ b/app/src/main/res/layout/fragment_heroes_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,4 +13,15 @@
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fabHeroesList"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_account_search"
+        app:layout_anchor="@id/cardList"
+        app:layout_anchorGravity="bottom|right|end"
+        app:layout_behavior="com.onlywatch.fleriche.onlywatch.ScrollAwareFABBehavior"/>
+
+</android.support.design.widget.CoordinatorLayout>
